early draft of new error model: Error = code + domain + location + context + sub-errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.14)
 project(wheels-result)
 
 option(WHEELS_IO_TESTS "Enable wheels-result tests" OFF)
+option(WHEELS_IO_EXAMPLES "Enable wheels-result examples" OFF)
 option(WHEELS_IO_DEVELOPER "Wheels-result developer mode" OFF)
 
 include(cmake/CompileOptions.cmake)
@@ -14,4 +15,8 @@ add_subdirectory(wheels)
 
 if(WHEELS_RESULT_TESTS OR WHEELS_RESULT_DEVELOPER)
     add_subdirectory(tests)
+endif()
+
+if(WHEELS_RESULT_EXAMPLES OR WHEELS_RESULT_DEVELOPER)
+    add_subdirectory(examples)
 endif()
