--- a/wheels/CMakeLists.txt
+++ b/wheels/CMakeLists.txt
@@ -1,9 +1,16 @@
 add_library(wheels-result
-	result/error.hpp
-	result/result.hpp
-	result/make.hpp
-	result/make.cpp
+		result/error_codes.hpp
+		result/error.hpp
+		result/error.cpp
+		result/result.hpp
+		result/make.hpp
+		result/make.cpp
 )
 
-target_link_libraries(wheels-result wheels)
+# Dependencies
+
+target_link_libraries(wheels-result
+		wheels
+		nlohmann_json::nlohmann_json)
+
 target_include_directories(wheels-result PUBLIC ..)
