--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.14)
 
 project(wheels-result)
 
-option(WHEELS_IO_TESTS "Enable wheels-result tests" OFF)
-option(WHEELS_IO_EXAMPLES "Enable wheels-result examples" OFF)
-option(WHEELS_IO_DEVELOPER "Wheels-result developer mode" OFF)
+option(WHEELS_RESULT_TESTS "Enable wheels-result tests" OFF)
+option(WHEELS_RESULT_EXAMPLES "Enable wheels-result examples" OFF)
+option(WHEELS_RESULT_DEVELOPER "Wheels-result developer mode" OFF)
 
 include(cmake/CompileOptions.cmake)
 
