--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,22 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(wheels-result)
+project(fallible)
 
-option(WHEELS_RESULT_TESTS "Enable wheels-result tests" OFF)
-option(WHEELS_RESULT_EXAMPLES "Enable wheels-result examples" OFF)
-option(WHEELS_RESULT_DEVELOPER "Wheels-result developer mode" OFF)
+option(FALLIBLE_TESTS "Enable Fallible tests" OFF)
+option(FALLIBLE_EXAMPLES "Enable Fallible examples" OFF)
+option(FALLIBLE_DEVELOPER "Fallible developer mode" OFF)
 
 include(cmake/CompileOptions.cmake)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 
 add_subdirectory(third-party)
-add_subdirectory(wheels)
+add_subdirectory(fallible)
 
-if(WHEELS_RESULT_TESTS OR WHEELS_RESULT_DEVELOPER)
+if(FALLIBLE_TESTS OR FALLIBLE_DEVELOPER)
     add_subdirectory(tests)
 endif()
 
-if(WHEELS_RESULT_EXAMPLES OR WHEELS_RESULT_DEVELOPER)
+if(FALLIBLE_EXAMPLES OR FALLIBLE_DEVELOPER)
     add_subdirectory(examples)
 endif()
