--- a/fallible/CMakeLists.txt
+++ b/fallible/CMakeLists.txt
@@ -7,6 +7,12 @@ add_library(fallible
 		result/result.hpp
 		result/make.hpp
 		result/make.cpp
+		rt/panic.hpp
+		rt/panic.cpp
+		rt/panicker.hpp
+		rt/panicker.cpp
+		rt/abort.hpp
+		rt/abort.cpp
 )
 
 # Dependencies
