remove json dependency

--- a/fallible/CMakeLists.txt
+++ b/fallible/CMakeLists.txt
@@ -23,8 +23,6 @@ add_library(fallible
 
 # Dependencies
 
-target_link_libraries(fallible
-		wheels
-		nlohmann_json::nlohmann_json)
+target_link_libraries(fallible wheels)
 
 target_include_directories(fallible PUBLIC ..)
